# cuttly-service

./: README.md  pyproject.toml  setup.py
cuttly/: .gitignore  main.py  models.py  requirements.txt  utils.py
