[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuttly-service"
version = "0.1.0"
description = "short url"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    { name="slvler"}
]
dependencies = [
    "requests>=2.32.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
]

[project.urls]
"Homepage" = "https://github.com/selviler/cuttly-service"